--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://use.fontawesome.com/1ff70f55b9.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
